--- a/Ui-With-Sass/index.html
+++ b/Ui-With-Sass/index.html
@@ -10,8 +10,8 @@
 
 <body>
     <header>
-        <nav>
-            <div class="wrapper1">
+        <nav id="main-nav">
+            <div class="wrapper">
                 <ul>
                     <l1><a href="#">Home</a></l1>
                     <l1><a href="#">About us</a></l1>
@@ -23,17 +23,69 @@
             </div>
         </nav>
         <div class="lead-banner">
-            <img />
+            <img src="./images/banner-1.png" />
             <div class="banner-content">
                 <div class="wrapper">
-                    <span>check our video</span>
-                    <span>learning in 6 weeks </span>
+                    <span class="title">check our video</span>
+                    <span class="sub-title">learning in 6 weeks </span>
+
                 </div>
             </div>
         </div>
     </header>
-
-    </header>
+    <section id="services">
+        <div class="wrapper">
+            <h1>Services</h1>
+            <p></p>
+            <ul>
+                <li>
+                    <img src="img/icon-1.png" />
+                    <a href="#">Recording<br />services</a>
+                </li>
+                <li>
+                    <img src="img/icon-2.png" />
+                    <a href="#">Get a printed<br />certificate</a>
+                </li>
+                <li>
+                    <img src="img/icon-3.png" />
+                    <a href="#">Lessons via<br />Skype</a>
+                </li>
+            </ul>
+        </div>
+    </section>
+    <div class="lessons-banner">
+        <img src="img/banner-2.png" />
+        <div class="banner-content">
+            <div class="wrapper">
+                <span class="title">Our Lessons</span>
+                <span class="sub-title">Are Easy</span>
+                <ul>
+                    <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</li>
+                    <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</li>
+                    <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</li>
+                </ul>
+            </div>
+        </div>
+    </div>
+    <section id="projects">
+        <div class="wrapper">
+            <h1>Our Projects</h1>
+            <ul>
+                <li><img src="http://placehold.it/150x150" /></li>
+                <li><img src="http://placehold.it/150x150" /></li>
+                <li><img src="http://placehold.it/150x150" /></li>
+                <li><img src="http://placehold.it/150x150" /></li>
+                <li><img src="http://placehold.it/150x150" /></li>
+                <li><img src="http://placehold.it/150x150" /></li>
+                <li><img src="http://placehold.it/150x150" /></li>
+                <li><img src="http://placehold.it/150x150" /></li>
+                <li><img src="http://placehold.it/150x150" /></li>
+                <li><img src="http://placehold.it/150x150" /></li>
+                <li><img src="http://placehold.it/150x150" /></li>
+                <li><img src="http://placehold.it/150x150" /></li>
+            </ul>
+        </div>
+    </section>
 </body>
 
 </html>
