--- a/Ui-With-Sass/index.html
+++ b/Ui-With-Sass/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>sass learning by bharath</title>
     <link rel="stylesheet" href="./css/styles.css" />
     <link rel="stylesheet" href="./css/reset.css" />
 </head>
@@ -14,12 +14,12 @@
         <nav id="main-nav">
             <div class="wrapper">
                 <ul>
-                    <l1><a href="#">Home</a></l1>
-                    <l1><a href="#">About us</a></l1>
-                    <l1><a href="#">Lessons</a></l1>
-                    <l1><a href="#">Portfolio</a></l1>
-                    <l1><a href="#">Blog </a></l1>
-                    <l1><a href="#">Contact Us</a></l1>
+                    <li><a href="#">Home</a></li>
+                    <li><a href="#">About us</a></li>
+                    <li><a href="#">Lessons</a></li>
+                    <li><a href="#">Portfolio</a></li>
+                    <li><a href="#">Blog </a></li>
+                    <li><a href="#">Contact Us</a></li>
                 </ul>
             </div>
         </nav>
